# purp-value

./: Cargo.toml  LICENSE  readme.md
purp_value/: Cargo.toml  readme.md
purp_value/src/: impls.rs  lib.rs  prelude.rs  traits.rs  value.rs
purp_value/src/parser/: mod.rs  traits.rs
purp_value/src/serde_value/: de.rs  ser.rs
purp_value/src/serde_value/src/: de.rs  ser.rs
purp_value/src/to/: json.rs  yaml.rs
purp_value/src/types/: array.rs  datetime.rs  mod.rs  number.rs  object.rs  stringb.rs  value_key.rs
purp_value_derive/: Cargo.toml  readme.md
purp_value_derive/examples/: derive.rs
purp_value_derive/src/: lib.rs
purp_value_derive/src/tests/: lib_tests.rs
value/: Cargo.toml
value/src/: from.rs  lib.rs
value/src/serde_value/: de.rs  ser.rs
value/src/types/: datetime.rs  number.rs  object.rs
value_derive/: Cargo.toml
value_derive/src/: lib.rs
value_derive/src/tests/: lib_tests.rs
