[package]
name = "purp-value"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "readme.md"
repository = "https://github.com/14bislab/purp-value"
keywords = ["value", "generic", "type", "no_std", "serialization", "deserialization", "purp"]
documentation = "https://docs.rs/purp-value"
description = "A generic serialization/deserialization/type framework"
categories = ["encoding", "no-std"]

[dependencies]
pest="2.5.7"
pest_derive="2.5.7"
regex = "1.7.3"
chrono = "0.4.24"
serde = { version = "1.0.159", features = ["derive"], optional = true }

[features]
default = ["parser"]
parser = ["json"]
json = []
serde = ["dep:serde"]

[lib]
doctest = false